change position of hero title on small screens to prevent overlap

--- a/app/wp-content/themes/silvercreekequity/assets/styles/app.css
+++ b/app/wp-content/themes/silvercreekequity/assets/styles/app.css
@@ -679,7 +679,7 @@ a:active {
 ------------------------------------------------------------------------ */
 .hero {
     position: relative;
-    padding: 80px 0;
+    padding: 100px 0;
     color: var(--color-brand-light);
     text-align: center;
 }
@@ -690,13 +690,13 @@ a:active {
 
 .hero__title {
     position: absolute;
-    top: 50px;
+    top: 30px;
     left: 0;
     right: 0;
 }
 
 .hero__title__inner {
-    padding-bottom: 20px; /* push pseudo element */
+    padding-bottom: 15px; /* push pseudo element */
 }
 
 .hero__title::after {
@@ -717,6 +717,14 @@ a:active {
 @media (min-width: 860px) {
     .hero {
         padding: 150px 0;
+    }
+
+    .hero__title {
+        top: 50px;
+    }
+
+    .hero__title__inner {
+        padding-bottom: 20px; /* push pseudo element */
     }
 
     .hero__bd {
